--- a/backend/warehouse/src/main/resources/application.properties
+++ b/backend/warehouse/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/themarket?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=themarket
+spring.datasource.password=themarket
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.data.rest.base-path=/api
